fix footer on smaller screens

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 :root {
   --dark-bg: rgba(0, 4, 7, 1);
-  --dark-bg-accent: rgb(0, 4, 10, 1);
+  --dark-bg-accent: rgba(0, 4, 7, 0.9);
 
   --dark-color: rgba(250, 250, 250, 1);
   --dark-color-blue: #1f84be;
@@ -230,8 +230,9 @@ body {
   margin-right: 3rem;
 
   display: grid;
-  grid-auto-flow: column;
+  /* grid-auto-flow: column; */
   gap: 1rem;
+  grid-template-columns: repeat(auto-fit, minmax(5rem, 1fr))
 }
 
 .footer .content > div {
@@ -279,7 +280,7 @@ body {
   transition: all 0.2s ease-out;
 }
 
-.box.social {
+/* .box.social {
   width: 4.5rem;
   height: 4.5rem;
 
@@ -297,7 +298,7 @@ body {
   z-index: 5;
 
   transition: all 0.2s ease-out;
-}
+} */
 
 .box.social > .inner {
   background: var(--dark-bg);
